k8s-yaml/traefik2/Example/traefik-ingress-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger
  namespace: ingress-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`trae.tycng.com`)
      kind: Rule
      priority: 12
      services:
        - name: jaeger-query
          port: 80
          weight: 1
          # 开启粘性会话
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
              sameSite: none
          passHostHeader: true
          responseForwarding:
            flushInterval: 100ms
  tls:
    options:
      name: default
      namespace: ingress-system
    secretName: tls-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaegerhttp
  namespace: ingress-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`trae.tycng.com`)
      kind: Rule
      priority: 12
      services:
        - name: jaeger-query
          port: 80
          weight: 1
          # 开启粘性会话
          sticky:
            cookie:
              httpOnly: true
              name: cookie
              secure: true
              sameSite: none
          passHostHeader: true
          responseForwarding:
            flushInterval: 100ms
      middlewares:
        - name: redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: jaeger
  namespace: ingress-system
spec:
  entryPoints:
    - jaeger
  routes:
    # Match is the rule corresponding to an underlying router.
    - match: HostSNI(`*`)
      services:
        - name: jaeger-query
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: ingress-system
spec:
  redirectScheme:
    scheme: https
