k8s-yaml/traefik2/Example/websockets.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancherhttp
  namespace: cattle-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`rke.tycng.com`)
    kind: Rule
    priority: 12
    services:
    - name: rancher
      port: 80
    middlewares:
      - name: redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:   
    - websecure
  routes:
    - match: Host(`rke.tycng.com`)
      middlewares:
        - name: x-forwarded-proto-allow
          namespace: cattle-system
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    options: 
      name: default
      namespace: cattle-system
    secretName: tls-rancher-ingress    
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: cattle-system
spec:
  redirectScheme:
    scheme: https    
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: x-forwarded-proto-allow
  namespace: cattle-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
